# fast-yaml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  SECURITY.md  TRUSTED_PUBLISHING_SETUP.md  deny.toml  pyproject.toml
.github/: codecov.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/instructions/: ci.instructions.md  core.instructions.md  nodejs.instructions.md  python.instructions.md  rust.instructions.md
.github/workflows/: ci.yml  label-on-issue.yml  labeler.yml  release.yml  yaml-test-suite-xfail-bootstrap.yml
benches/: benchmark.py
benches/comparison/: README.md
benches/comparison/scripts/: README.md  generate_corpus.py  run_batch_benchmark.sh  run_benchmark.sh  run_multifile_benchmark.sh  run_nodejs_benchmark.sh  run_python_benchmark.sh  setup_nodejs_benchmarks.sh  setup_python_benchmarks.sh
crates/fast-yaml-cli/: Cargo.toml  README.md
crates/fast-yaml-cli/benches/: discovery_bench.rs  processor_bench.rs
crates/fast-yaml-cli/src/: cli.rs  discovery.rs  error.rs  lib.rs  main.rs
crates/fast-yaml-cli/src/batch/: config.rs  discovery.rs  error.rs  mod.rs  processor.rs  reader.rs  reporter.rs  result.rs
crates/fast-yaml-cli/src/commands/: convert.rs  format.rs  format_batch.rs  lint.rs  lint_batch.rs  mod.rs  parse.rs
crates/fast-yaml-cli/src/config/: common.rs  formatter.rs  io.rs  mod.rs  output.rs  parallel.rs
crates/fast-yaml-cli/src/io/: input.rs  mod.rs  output.rs
crates/fast-yaml-cli/src/reporter/: events.rs  mod.rs  output.rs
crates/fast-yaml-cli/tests/: backward_compat.rs  batch_format.rs  batch_integration_test.rs  batch_stress_test.rs  cli_tests.rs  integration_tests.rs
crates/fast-yaml-cli/tests/fixtures/discovery/hidden/: visible.yaml
crates/fast-yaml-cli/tests/fixtures/discovery/mixed/: data.json
crates/fast-yaml-cli/tests/fixtures/discovery/nested/subdir/: nested.yaml
crates/fast-yaml-core/: Cargo.toml  README.md
crates/fast-yaml-core/src/: emitter.rs  error.rs  lib.rs  parser.rs  streaming.rs
crates/fast-yaml-core/src/streaming/: arena_backend.rs  formatter.rs  mod.rs  std_backend.rs
crates/fast-yaml-core/tests/: yaml_spec_fixtures.rs
crates/fast-yaml-ffi/: Cargo.toml  README.md
crates/fast-yaml-ffi/src/: conversion.rs  error.rs  lib.rs
crates/fast-yaml-linter/: Cargo.toml  README.md
crates/fast-yaml-linter/src/: comment_parser.rs  context.rs  diagnostic.rs  lib.rs  linter.rs  tokenizer.rs
crates/fast-yaml-linter/src/config/: config_file.rs  mod.rs
crates/fast-yaml-linter/src/formatter/: sarif.rs  text.rs
crates/fast-yaml-linter/src/rules/: braces.rs  brackets.rs  colons.rs  commas.rs  comments.rs  comments_indentation.rs  document_end.rs  document_start.rs  duplicate_keys.rs  empty_lines.rs  empty_values.rs  float_values.rs  flow_common.rs  hyphens.rs  indentation.rs  invalid_anchors.rs  key_ordering.rs  line_length.rs  mod.rs  new_line_at_end_of_file.rs  new_lines.rs  octal_values.rs  quoted_strings.rs  trailing_whitespace.rs  truthy.rs
crates/fast-yaml-linter/src/source/: mapper.rs
crates/fast-yaml-linter/tests/: fixture_tests.rs
crates/fast-yaml-parallel/: Cargo.toml  README.md
crates/fast-yaml-parallel/src/: processor.rs
docs/: CI-CD-QUICKSTART.md
nodejs/: .npmignore  .prettierignore  Cargo.toml  README.md  biome.json  build.rs  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
nodejs/__test__/: api-coverage.spec.ts  batch.spec.ts  edge-cases.spec.ts  index.spec.ts  lint.spec.ts  mark.spec.ts  options.spec.ts  parallel.spec.ts  parser.spec.ts  preallocation.bench.ts  schema.spec.ts
nodejs/src/: batch.rs  conversion.rs  emitter.rs  lib.rs  lint.rs  parallel.rs  parser.rs
python/: Cargo.toml  README.md  pyproject.toml
python/benches/: parse_benchmark.rs
python/fast_yaml/: __init__.py  _core.pyi  lint.py  parallel.py
python/scripts/: gen_yaml_test_suite_xfail.py
python/src/: batch.rs  conversion.rs  event_loader.rs  lib.rs  lint.rs  parallel.rs
python/tests/: _suite_support.py  conftest.py  test_batch.py  test_dumpers.py  test_exceptions.py  test_large_integers.py  test_linter.py  test_loaders.py  test_parallel.py  test_yaml_122_compliance.py  test_yaml_test_suite.py
python/tests/data/: yaml_test_suite_xfail.txt
scripts/: install.sh
skills/fast-yaml-cli/: SKILL.md
tests/: test_fast_yaml.py
tests/fixtures/linter/: colons_trailing_whitespace.yaml  duplicate_key_with_alias.yaml
tests/fixtures/yaml-spec/: 2.01-sequence-of-scalars.yaml  2.02-mapping-scalars-to-scalars.yaml  2.03-mapping-scalars-to-sequences.yaml  2.04-sequence-of-mappings.yaml  2.05-sequence-of-sequences.yaml  2.06-mapping-of-mappings.yaml  2.07-two-documents.yaml  2.08-play-by-play.yaml  2.09-single-document-comments.yaml  2.10-anchors-and-aliases.yaml  2.11-mapping-between-sequences.yaml  2.12-compact-nested-mapping.yaml  2.13-literal-block-scalar.yaml  2.14-folded-block-scalar.yaml  2.15-folded-indented-lines.yaml  2.16-indentation-determines-scope.yaml  2.17-quoted-scalars.yaml  2.18-multi-line-flow-scalars.yaml  2.19-integers.yaml  2.20-floating-point.yaml  2.21-miscellaneous.yaml  2.22-timestamps.yaml  2.23-explicit-tags.yaml  2.24-global-tags.yaml  2.25-unordered-sets.yaml  2.26-ordered-mappings.yaml  2.27-invoice.yaml  2.28-log-file.yaml  README.md  anchors-aliases.yaml  block-scalars.yaml  complex-keys.yaml  core-schema-booleans.yaml  core-schema-floats.yaml  core-schema-integers.yaml  core-schema-null.yaml  directives.yaml  edge-cases.yaml  empty-documents.yaml  flow-collections.yaml  (+1 more)
