[workspace]
resolver = "2"
members = [
    "crates/fast-yaml-core",
    "crates/fast-yaml-ffi",
    "python",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rabax/fast-yaml"

[workspace.dependencies]
yaml-rust2 = "0.10"
thiserror = "2.0"
pyo3 = { version = "0.27", features = ["extension-module"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups with lower priority so individual lints can override
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow specific patterns (higher priority overrides groups)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
