[package]
name = "fast-yaml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A fast YAML parser for Python, powered by Rust"
repository.workspace = true
keywords = ["yaml", "parser", "python", "pyo3"]
categories = ["parsing", "encoding"]

[lib]
name = "fast_yaml"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
yaml-rust2.workspace = true
fast-yaml-core = { path = "../crates/fast-yaml-core" }

[dev-dependencies]
criterion = "0.8"

[lints]
workspace = true

[[bench]]
name = "parse_benchmark"
harness = false
