[package]
name = "fast-yaml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast YAML parser for Python, powered by Rust"
keywords = ["yaml", "parser", "python", "pyo3"]
categories = ["parsing", "encoding"]

[lib]
name = "fast_yaml"
crate-type = ["cdylib", "rlib"]

[dependencies]
fast-yaml-core.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }
yaml-rust2.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parse_benchmark"
harness = false

[lints]
workspace = true
