[package]
name = "fast-yaml-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast YAML command-line processor with validation and linting"
readme = "README.md"
keywords = ["yaml", "cli", "parser", "linter", "converter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "fy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "env", "wrap_help"] }
colored = { workspace = true, optional = true }
fast-yaml-core = { workspace = true, features = ["streaming"] }
fast-yaml-linter = { workspace = true, optional = true, features = ["json-output"] }
glob.workspace = true
globset.workspace = true
ignore.workspace = true
is-terminal = { workspace = true, optional = true }
memmap2.workspace = true
num_cpus.workspace = true
ordered-float.workspace = true
rayon.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
indoc.workspace = true
predicates.workspace = true
proptest.workspace = true
tempfile.workspace = true

[features]
default = ["colors", "linter", "arena"]
colors = ["dep:colored", "dep:is-terminal"]
linter = ["dep:fast-yaml-linter"]
arena = ["fast-yaml-core/arena"]
all = ["colors", "linter", "arena"]

[[bench]]
name = "discovery_bench"
harness = false

[[bench]]
name = "processor_bench"
harness = false

[lints]
workspace = true
