[package]
name = "fast-yaml-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI utilities for fast-yaml bindings"

[dependencies]
fast-yaml-core = { path = "../fast-yaml-core" }
thiserror.workspace = true

[lints]
workspace = true
