[package]
name = "fast-yaml-ffi"
version = "0.1.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI utilities for fast-yaml bindings"
readme = "README.md"
keywords = ["yaml", "ffi", "bindings"]
categories = ["parsing", "api-bindings"]

[dependencies]
fast-yaml-core.workspace = true
thiserror.workspace = true

[lints]
workspace = true
